# shift_face_verification_service

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: Dockerfile
k8s/: zar-face-verification-service-configmap.yaml  zar-face-verification-service-deployment.yaml  zar-face-verification-service-secrets.yaml  zar-face-verification-service-service.yaml
my-charts/: values.yaml
my-charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
src/app/: face_verification.py  main.py
src/app/api/: api.py  face.py
src/app/routers/: face_verification.py
src/app/services/: __init__.py  face_verification.py
src/tests/: test_api.py  test_face_verification_service.py  test_kafka.py  test_main.py
